add a new stylesheet to mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -122,3 +122,4 @@ copyright : KIR Training Catalogue is licensed under a <a rel="noopener" target=
 
 extra_css:
   - stylesheets/extra.css
+  - stylesheets/catalogue-return-button.css
