--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -123,3 +123,4 @@ copyright : KIR Training Catalogue is licensed under a <a rel="noopener" target=
 extra_css:
   - stylesheets/extra.css
   - stylesheets/catalogue-return-button.css
+  - stylesheets/side_bar_menu.css
